test/files/run/separate-package-private.check
newSource1.scala:3: error: class A in package a cannot be accessed as a member of package a from object Test in package example
object Test { val x = new a.A }
                            ^
